Fix mobile-responsiveness and spacing for About section and Toolbox Section

--- a/src/components/ToolboxSwiper/_ToolboxSwiper.scss
+++ b/src/components/ToolboxSwiper/_ToolboxSwiper.scss
@@ -4,8 +4,7 @@
 	background: #000000;
 	justify-content: center;
 	align-items: center;
-	padding-left: 1.5rem;
-	padding-right: 1.5rem;
+	padding: 1.75rem;
 
 	p {
 		color: #fff;
@@ -29,16 +28,20 @@
 			}
 		}
 	}
+
+	.section-heading {
+		font-size: 2.5rem;
+	}
 }
 
 .toolbox_section-wrapper {
 	align-items: center;
-	max-width: 90vw;
-	margin: auto;
+	width: 100%;
+	margin: 1.75rem auto;
 
 	.section-heading {
 		color: white;
-		text-align: center;
+		text-align: left;
 		margin-bottom: 1.5rem;
 	}
 }
@@ -50,7 +53,7 @@
 	gap: 2rem;
 	align-items: center;
 	justify-content: center;
-	width: fit-content;
+	width: 100%;
 	margin: auto;
 
 	.logo-figma {
@@ -220,14 +223,14 @@
 }
 
 .tools-grid-container {
-	display: none;
+	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: auto;
-	width: fit-content;
-	gap: 1rem;
+	grid-template-rows: auto auto;
+	width: 100%;
+	gap: 0.75rem;
 	margin: auto;
 	margin-bottom: 1rem;
-	padding: 1.5rem 2rem;
+	padding: 1rem;
 	border-radius: 0.3125rem;
 	background: rgba(255, 255, 255, 0.15);
 
@@ -292,12 +295,9 @@
 }
 
 .tools-pm > .tools-grid-container {
-	grid-template-columns: 1fr;
-	grid-template-rows: repeat(2, 1fr);
-}
-
-.desktop-only {
-	display: none;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: auto;
+	width: fit-content;
 }
 
 @include breakpoint(med) {
@@ -310,6 +310,7 @@
 
 		.section-heading {
 			margin-bottom: 2.5rem;
+			text-align: center;
 		}
 	}
 
@@ -331,6 +332,12 @@
 
 	.tools-swipe {
 		display: none;
+	}
+
+	.tools-pm > .tools-grid-container {
+		grid-template-columns: 1fr;
+		grid-template-rows: repeat(2, 1fr);
+		width: fit-content;
 	}
 }
 
