--- a/src/scss/about/_AboutSection.scss
+++ b/src/scss/about/_AboutSection.scss
@@ -13,6 +13,7 @@
 	width: 90vw;
 	max-width: 40rem;
 	margin: auto;
+	margin-bottom: 3.625rem;
 }
 
 .about_portrait-wrapper {
